# DataMining-project

./: .gitignore  aa.py  gui.py  makefile  models_params.yaml  mypy.ini  pyproject.toml  test.py
notebook/: EDA part 1.ipynb  EDA part 2.1.ipynb  EDA part 2.ipynb  EDA part 3.ipynb  MODEL.ipynb  Models.ipynb  dataset_1.ipynb  final 1 copy.ipynb  final 1.ipynb  final 2.ipynb  final 3.ipynb  ideal.ipynb  part2-apiriori.ipynb  test_data_with_drift.csv  tester.ipynb
pages/: 1_first_data_dashboard.py  2_second_data_dashboard.py  3_third_data_dashboard.py  4_model_gui.py  5_batch_predict.py  5_models_overview.py  6_models_overview.py
soil_fertility/: utils.py
soil_fertility/components/: data_ingestion.py  data_transformation.py  metrics.py  model_trainer.py  model_utils.py  models.py  path_config.py  transformations.py  utils.py
soil_fertility/components/data_pipeline/: data_ingestion.py  data_transformation.py
soil_fertility/components/data_transformation/: data_transformation.py  data_transformation_part2.py  data_transformation_part3.py
soil_fertility/components/model_pipeline/: model_trainer.py  monitoring.py
soil_fertility/components/model_pipeline/models/: random_forest.py
soil_fertility/components/models/: DBScan.py  KNN.py  Kmeans.py  apriori.py  decision_tree.py  random_forest.py
soil_fertility/components/utils/: metrics.py  model_utils.py  path_config.py  transformations.py
soil_fertility/pipeline/: predict_pipeline.py  train_pipeline.py
tests/unit_tests/: test_data_ingestion.py  test_data_transformation.py
